OPTIONAL_PROGS =

if BUILD_MPI
OPTIONAL_PROGS += MPIArt MPI_WBP 
endif

if BUILD_OGL
OPTIONAL_PROGS += Phan3D
endif

SUBDIRS = 2DInterpolation \
	3DInterpolation \
	Adapt_for_Spider \
	Add_noise \
	Adjust_CTF \
	Adjust_surface \
	Align3D \
	Align2D \
	Ang_distribution \
	Angular_distance \
	Angular_predict \
	Angular_refinement \
	Are_different \
	Art \
	Assign_angles \
	Assign_CTF \
	Assign_multiple_CTFs \
	BatchSOM \
	CCP4Spider \
	CodeStatis \
	Combine_stats \
	CorrectPhase \
	Correlation \
	CpSel \
	Create_phantom \
	CTF_profile \
	Data2Img \
	Data2Vol \
	Deform \
	Denoising \
	Denoising_micrograph \
	DocFile_Histogram \
	DownSample \
	Draw_surface \
	DWT \
	Euler \
	Evaluate \
	Evaluate_FSCs \
	FCMeans \
	FFT \
	FindCenter3D \
	FKCN \
	Flip \
	FourierFilter \
	FSOM \
	Headerinfo \
	Histogram \
	IDR_ART \
	IDWT \
	IFFT \
	Img2Data \
	Infogeo \
	KCMeans \
	KerDenSOM \
	Lattice_vectors \
	Mark \
	Mask \
	Microscope \
	Morphology \
	MvSel \
	Normalize \
	Operate \
	PCA \
	Phantom_transform \
	Project \
	Projection_Neighbourhood \
	ProjectPCA \
	Radon_Transform \
	RandomMapping \
	Random_phantom \
	Raw22spi \
	Recons_test \
	Reverse_endian \
	Resolution \
	RmSel \
	Rotate \
	Sammon \
	Sample_size \
	Scale \
	Scissor \
	Segment \
	Select_Images \
	SelStats \
	Separate_Objects \
	Shift \
	Show \
	Skew \
	SOM \
	SpAR \
	SpARMA \
	Spots2RealSpace2D \
	SSNR \
	Statis \
	Surface \
	Symmetrize \
	Taxa_tilt \
	Threshold \
	Tiff2Raw \
	ToPDB \
	ToPhantom \
	Visualize_FFT \
	Vol2Data \
	VolSampler \
	Voxels22Blobs \
	WBP \
	Window \
	Window_micrograph \
	XMask $(OPTIONAL_PROGS)

