OPTIONAL_PROGS =

if BUILD_MPI
OPTIONAL_PROGS += MPIArt MPI_WBP MPI_MLalign2D MPI_MLrefine3D MPI_Projection_matching
endif

if BUILD_TIFF
OPTIONAL_PROGS += Tiff2Raw
endif

if BUILD_QT
OPTIONAL_PROGS += CTFViewer Edit Mark Show XMask
endif

SUBDIRS = 2DInterpolation \
	3DInterpolation \
	Adapt_for_Spider \
	Add_noise \
	Adjust_CTF \
        Adjust_volume \
	Adjust_surface \
	Align3D \
	Align2D \
	Ang_distribution \
	Angular_distance \
	Angular_predict \
	Angular_predict_continuous \
	Angular_predict_tomography \
	Angular_refinement \
	ApplyGeo \
	AppendDocFile \
	Are_different \
	Art \
	Assign_angles \
	Assign_CTF \
	Assign_multiple_CTFs \
	BatchSOM \
	Break_sym \
	Centilt \
	CodeStatis \
	Combine_stats \
	Compare_Selfiles \
	CorrectPhase \
	Correlation \
	CpSel \
	Create_phantom \
	CTF_profile \
	Data2Img \
	Data2Vol \
	deconvoluteCTF \
	Deform \
	Denoising \
	Denoising_micrograph \
	DocFile_Histogram \
	DownSample \
	Draw_surface \
	DWT \
        EM2Angles \
        Enhance_PSD \
	Euler \
	Evaluate \
	Evaluate_FSCs \
	Exp_Shift_Computation \
	FCMeans \
	FFT \
	FindCenter3D \
	FKCN \
	Flip \
	FourierFilter \
	FSOM \
	Headerinfo \
	Histogram \
	IDR_ART \
	IDWT \
	IFFT \
	Img2Data \
	Infogeo \
	KCMeans \
	KerDenSOM \
	Lattice_vectors \
	MakeSpectra \
	Mask \
        Markhan \
	Microscope \
	MLalign2D \
	MLalign2D_combine \
	MLrefine3D \
	Morphology \
	MvSel \
	Normalize \
	Operate \
	PCA \
        PDBPhantom \
	Phantom_transform \
	Project \
	Projection_Neighbourhood \
	Projection_matching \
	ProjectPCA \
	Pyramid \
	Radon_Transform \
	RandomMapping \
	Random_phantom \
	Range_adjust \
	Raw22spi \
	Recons_test \
	Reverse_endian \
	Resolution \
	RmSel \
	Rotate \
	RotateDescr \
	Sammon \
	Sample_size \
	Scale \
	Scissor \
	Segment \
	Select_Images \
	SelStats \
	Separate_Objects \
	Shift \
	Skew \
	SOM \
	Sort_junk \
	Split_selfile \
	SpAR \
	SpARMA \
	Spi22em \
	Spider22CCP4 \
	Spots2RealSpace2D \
	SSNR \
	Statis \
	Surface \
	Symmetrize \
	Threshold \
	ToPDB \
	ToPhantom \
	Unbend \
	Visualize_FFT \
	Vol2Data \
	VolSampler \
	Voxels22Blobs \
	Wbp \
	Window \
	Window_micrograph \
	$(OPTIONAL_PROGS)

