lib_LTLIBRARIES = libXmippClassif_@host_os@.la

libXmippClassif_@host_os@_la_SOURCES = Src/xmippCTVectors.cc \
	Src/xmippCodeBook.cc \
	Src/xmippFuzzyCodeBook.cc \
	Src/xmippDistances.cc \
	Src/xmippSammon.cc \
	Src/xmippFCMeans.cc \
	Src/xmippMap.cc \
	Src/xmippSOM.cc \
	Src/xmippFKCN.cc \
	Src/xmippFuzzySOM.cc \
	Src/xmippKerDenSOM.cc \
	Src/xmippBatchSOM.cc \
	Src/xmippUmatrix.cc \
	Src/xmippPlanes.cc \
	Src/xmippTStudentKerDenSOM.cc \
	Src/xmippGaussianKerDenSOM.cc \
	Src/xmippPC.cc \
	Src/xmippRBF.cc \
	Src/xmippRM.cc

INCLUDES = -I$(top_srcdir)/Lib
