lib_LTLIBRARIES = libOldXmipp_@host_os@.la
libOldXmipp_@host_os@_la_SOURCES = cabecero.cc varios.cc varios2.cc varios3.cc dimension.cc \
	floatnat.cc iocabecero.cc usages.cc fft.cc fftmod.cc fftn.cc allfft.cc \
	filtros.cc specmod.cc

INCLUDES = -I$(top_srcdir)/Lib

EXTRA_DIST = fftn.h  groe.h  sacaf.h  spider.h

docs:
